tests/paczka1/small_fuzzy/30364884.err
Error in line 4: fJadeOFJ6Pt A748 96,3
Error in line 6: fJadeOFJ6Pt A420 1,0
Error in line 13: e8No0dU A420 53,9
